<resources>
    <string name="app_name">AndRo.bot</string>
    <string name="app_desc">The HTTP based Android Robot</string>
    <string name="hello_world">AndRo.bot</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AndRo.bot</string>
    <string name="title_activity_remote_surveillance">RemoteSurveillanceActivity</string>
    <string name="title_activity_open_cv">OpenCVActivity</string>
    <string name="rover_voice_engine">Voice</string>
    <string name="title_activity_voice_recognition">VoiceRecognitionActivity</string>
    <string name="title_activity_gyro_remote">GyroRemote</string>
    <string name="title_activity_photograpy">PhotograpyActivity</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="title_activity_my_preference">Settings</string>
    <string name="dialog_based_preferences">HTTP Server Settings</string>
    <string name="title_edittext_preference_pass">Password</string>
    <string name="summary_edittext_preference_pass">Set User Login Password</string>
    <string name="dialog_title_edittext_preference_pass">Password</string>
    <string name="title_edittext_preference_port">Port</string>
    <string name="summary_edittext_preference_port">Set port to run server</string>
    <string name="dialog_title_edittext_preference_port">Port</string>
    <string name="launch_preferences">Online Help</string>
    <string name="title_intent_preference">Open Help</string>
    <string name="summary_intent_preference">Open documentation on the web</string>
    <string name="title_activity_cvlist">CVListActivity</string>
    <string name="title_activity_face_detection">FaceDetectionActivity</string>
    <string name="title_activity_cvlist_main">CVListMain</string>  
    <string name="additional_comm_preferences">Additional Communication</string>
    <string name="title_sms">ON/OFF SMS Server</string>
    <string name="summ_sms">Turn On/Off SMS Server</string>
    <string name="title_twitter">ON/OFF Twitter Alert</string>
    <string name="summ_twitter">Turn On/Off Twitter Alert</string>
    <string name="title_stream">ON/OFF Image Streaming</string>
    <string name="summ_stream">Enhance performance by turning OFF image streaming</string>
    <string name="title_httpd">ON/OFF HTTP Server</string>
    <string name="summ_httpd">Turn OFF HTTP Server</string>
    <string name="gyro_trans">TRANSLATE</string>
    <string name="gyro_rotate">ROTATE</string>
    <string name="gyro_stop">STOP</string>
    <string name="gyro_start">START</string>    
    <string name="cv_note">AndRo.bot uses openCV for Computer Vision.</string>    
    <string name="cv_processor_note">Computer Vision is processor intensive, and hence you are advised to turn off HTTP Image Processing, if possible.</string>    
</resources>