<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#F4F1DF" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <Button
            android:id="@+id/stop"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/gyro_stop"
            android:onClick="setStop" />

        <Button
            android:id="@+id/start"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/gyro_start"
            android:onClick="setStart" />

        <Button
            android:id="@+id/rotate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/gyro_rotate"
            android:onClick="setRotate" />

        <Button
            android:id="@+id/translate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/gyro_trans"
            android:onClick="setTrans" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        
	<TextView
	    android:id="@+id/mText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="20dp"
	    android:text="@string/hello_world"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
</LinearLayout>